# teaboard

./: .gitignore  Cargo.toml  Dockerfile  README.md  Tea.toml  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: Post.svelte  PostForm.svelte  markdown.ts  request.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/[id]/: +page.svelte  +page.ts
frontend/src/routes/posts/[id]/: +page.svelte  +page.ts
frontend/static/: style.css
migrations/: 20221031134309_boards.sql  20221101060734_images.sql  20221101062125_posts.sql  20221101063553_posts.sql  20221123214746_mentions.sql
src/: auth.rs  conf.rs  cors.rs  id.rs  main.rs  ratelimit.rs
src/models/: board.rs  image.rs  mod.rs  post.rs
src/routes/: fetch_image.rs  index.rs  mod.rs
src/routes/admin/: mod.rs
src/routes/boards/: board_create.rs  board_delete.rs  board_edit.rs  board_feed.rs  board_info.rs  mod.rs
src/routes/posts/: get_post.rs  lock_post.rs  mod.rs  new_post.rs  pin_post.rs
