[package]
name = "teaboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
env_logger = "0.9.1"
image = "0.24.4"
kamadak-exif = "0.5.5"
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_redis", "sqlx_mysql", "sqlx_macros"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha256 = "1.1.1"
